2005-04-27  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-flow.h (ssa_names): Change the type to VEC(tree,gc).
	(num_ssa_names): Use VEC_length.
	(ssa_names): Use VEC_index.
	* tree-ssanames.c (ssa_names): Change the type to
	VEC(tree,gc).
	(init_ssanames, fini_ssa_names, make_ssanames,
	release_ssa_name): Update uses of ssa_names.

2005-04-27  Devang Patel <dpatel@apple.com>

	* dbxout.c (dbxout_type): Check use_gnu_debug_info_extensions.

2005-04-27  Matt Thomas <matt@3am-software.com>
            Jan-Benedict Glaw <jbglaw@microdata-pos.de>

	* config/vax/vax.c (vax_rtx_costs): Whitespace cleanup.
	(vax_output_mi_thunk): Ditto.
	(vax_notice_cc_update): Ditto.
	(INDEX_REGISTER_P): Add trailing \.
	(BASE_REGISTER_P): Add trailing \.
	(legitimate_address_p): Whitespace cleanup.  Remove trailing \.

2005-04-27  Richard Guenther  <rguenth@gcc.gnu.org>

	* tree-ssa-propagate.c (set_rhs): Check operand of
	ADDR_EXPR for gimpliness, too.

2005-04-27  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-ssa-pre.c: Fix a comment typo.

2005-04-27  Zdenek Dvorak  <dvorakz@suse.cz>

	PR tree-optimization/21171
	* tree-ssa-loop-ivopts.c (find_interesting_uses_address): Do not
	record address uses if the reference is volatile.

2004-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* tree-complex.c (expand_vector_operation): New, extracted from
	expand_vector_operations_1.
	(tree_vec_extract): Build a NOP_EXPR.
	(expand_vec_parallel): Do not care about returning the correct type.
	(expand_vector_operations_1): Call expand_vector_operation.
	Build the VIEW_CONVERT_EXPR on the left side of MODIFY_EXPRs.

	* tree-complex.c (gate_expand_vector_operations): New.
	(pass_lower_vector_ssa): Use it.
	* tree-optimize.c (init_tree_optimization_passes): Include
	pass_lower_vector_ssa.
	* tree-vect-transform.c (vect_min_worthwhile_factor): New.
	(vectorizable_operation): Use it.
	* tree-vectorizer.c (get_vectype_for_scalar_type): Accept
	integer modes for the vector type.
